# webauthn-proxy

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  THREAT_MODEL.md
.github/workflows/: discord-devlog.yml  discord-release.yml
daemon/: Cargo.toml
daemon/src/: authentication.rs  credentials.rs  crypto_ops.rs  dbus_interface.rs  main.rs  pam.rs  prereqs.rs  protocol.rs  registration.rs  session.rs  tpm.rs  validator.rs
extension/: manifest.json
extension/src/: background.js  crypto.js
manager/: Cargo.toml  styles.css
manager/src/: main.rs
manager/src/ui/: mod.rs
mykey-daemon/: Cargo.toml
mykey-daemon/src/: credentials.rs  crypto.rs  dbus_interface.rs  main.rs  pam.rs  prereqs.rs  protocol.rs  registration.rs  replay.rs  tpm.rs  validator.rs
mykey-host/: Cargo.toml
mykey-host/src/: authentication.rs  dbus_client.rs  main.rs  pam.rs  protocol.rs  registration.rs  session.rs  tpm.rs
mykey-manager/: Cargo.toml  styles.css
mykey-manager/src/: main.rs
mykey-manager/src/ui/: biometrics.rs  credentials.rs  mobile_companion.rs  mod.rs  secure_folder.rs
mykey-migrate/: Cargo.toml
mykey-migrate/src/: daemon_client.rs  main.rs  secrets_client.rs  storage.rs
mykey-pin/: Cargo.toml
mykey-pin/src/: lib.rs  main.rs  pin.rs
mykey-proxy/chromium/: manifest.json
mykey-proxy/chromium/src/: background.js  storage.js  ui.js
mykey-proxy/firefox/: PLACEHOLDER.md  manifest.json
mykey-proxy/firefox/src/: background.js
mykey-secrets/: Cargo.toml
mykey-secrets/src/: collection.rs  daemon_client.rs  item.rs  main.rs  prereqs.rs  service.rs  session.rs  storage.rs
mykey-tray/: Cargo.toml
mykey-tray/src/: main.rs  tray.rs
native-host/: Cargo.toml
native-host/src/: authentication.rs  crypto.rs  dbus_client.rs  main.rs  pam.rs  protocol.rs  registration.rs  session.rs  tpm.rs
scripts/: com.mykey.Daemon.conf  com.mykey.authenticate.policy  com.mykey.host.json  com.mykeyproxy.Daemon.conf  com.mykeyproxy.authenticate.policy  com.mykeyproxy.host.json  com.webauthnproxy.Daemon.conf  com.webauthnproxy.authenticate.policy  com.webauthnproxy.host.json  install.sh  mykey-daemon.service  mykey-proxy-daemon.service  mykey-secrets.service  mykey-tray.service  org.freedesktop.secrets.conf  uninstall.sh  webauthn-proxy-daemon.service  webauthn-proxy-tray.service
systray/: Cargo.toml
systray/src/: main.rs  tray.rs
