[package]
name = "mykey-proxy-daemon"
version = "0.1.0"
edition = "2021"
description = "Persistent D-Bus service for MyKey Proxy — PAM + TPM2 on Linux"
license = "MIT"

[[bin]]
name = "mykey-proxy-daemon"
path = "src/main.rs"

[dependencies]
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
# zbus 4.x has the tokio feature; 5.x dropped it in favour of async-io
zbus       = { version = "4",    features = ["tokio"] }
tokio      = { version = "1",    features = ["full"] }
zeroize    = { version = "1",    features = ["derive"] }
rand       = "0.8"
base64     = "0.21"
hmac       = "0.12"
sha2       = "0.10"
aes-gcm    = "0.10"
p256       = { version = "0.13", features = ["ecdsa"] }
libc       = "0.2"
log        = "0.4"
env_logger = "0.11"
hex        = "0.4"
# pam = "0.8" is required for the PAM conversation handler in the daemon
pam        = "0.8"
# nix 0.27.x for process inspection helpers
nix        = { version = "0.27", features = ["process", "signal", "fs"] }

[dependencies.tss-esapi]
version  = "7"
optional = true

[features]
default = []
tpm2    = ["dep:tss-esapi"]
