[package]
name = "mykey-secrets"
version = "0.1.0"
edition = "2021"
description = "Secret Service API provider for MyKey — TPM2-sealed secret storage"
license = "MIT"

[[bin]]
name = "mykey-secrets"
path = "src/main.rs"

[dependencies]
zbus = { version = "4", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
